# trAIner

./: pyproject.toml
trainer/: __main__.py  settings.py
