[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Michał Mazurek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pydanclick = "^0.3.0"
pyfiglet = "^1.0.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
